[package]
name = "minecraft-rs"
description = "A server for Minecraft"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
edition = "2018"

[lib]
name = "minecraft"
path = "src/lib.rs"

[[bin]]
name = "minecraft"
path = "src/main.rs"

[dependencies]
bytes = "0.4.12"
clap = "2.33.0"
enum_dispatch = "0.1.3"
env_logger = "0.6.2"
futures-preview = { version = "0.3.0-alpha.17", features = ["async-await", "compat", "io-compat", "nightly"] }
hematite-nbt = "0.4.0"
log = "0.4.8"
mc-varint = "0.1.1"
openssl = "0.10.24"
rand = "0.7.0"
reqwest = "0.9.19"
serde_json = "1.0.40"
tokio = "0.2.0-alpha.1"
